[project]
name = "dataloader-demo"
version = "0.1.0"
description = "Demo showing various data loading examples"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.1",
    "diffusers>=0.35.1",
    "matplotlib>=3.10.6",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.57.0",
    "viztracer>=1.0.4",
    "xformers>=0.0.32.post2",
    "blessed>=1.20.0",
]
